--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-stateful-form",
+  "name": "react-stateful-form-component",
   "version": "0.0.0",
   "description": "From component for React using react state hooks",
   "main": "lib/react-stateful-form.js",
